Mit Colab erstellt

--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/szrobi96/image_recognition/blob/main/Train_YOLO_Models.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,7 +21,7 @@
         "\n",
         "**Adapted by:** Róbert Szabó, [email](mailto:szabo.robert96@hotmail.com)\n",
         "\n",
-        "**Last updated:** July, 08 2025\n",
+        "**Last updated:** July 08, 2025\n",
         "\n",
         "**Original GitHub:** [Train and Deploy YOLO Models (Candies)](https://github.com/EdjeElectronics/Train-and-Deploy-YOLO-Models)\n",
         "\n",
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,7 +122,7 @@
         "\n",
         "\n",
         "*   Build a custom dataset by taking your own pictures of the objects and labeling them (this typically results in the best performance)\n",
-        ">*   Find a pre-made dataset from sources like [Roboflow Universe](), [Kaggle](), or [Google Images V7]() \n",
+        ">*   Find a pre-made dataset from sources like [Roboflow Universe](), [Kaggle](), or [Google Images V7]()\n",
         "\n",
         "\n",
         "If you want to build your own dataset, there are several tools available for labeling images. One good option is [Label Studio](https://labelstud.io/?utm_source=youtube&utm_medium=video&utm_campaign=edjeelectronics), a free and open-source labeling tool that has a simple workflow while providing capabilities for more advanced features. My YouTube video that walks through this notebook (link to be added soon) shows how to label images with Label Studio.\n",
@@ -191,7 +191,7 @@
         "id": "ZW_0c110fOiz"
       },
       "source": [
-        "Next, we'll upload our dataset and prepare it for training with YOLO. "
+        "Next, we'll upload our dataset and prepare it for training with YOLO."
       ]
     },
     {
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -473,7 +473,7 @@
         "id": "0c5Kdh0GmQHS"
       },
       "source": [
-        "There's one last step before we can run training: we need to create the Ultralytics training configuration YAML file. This file specifies the location of your train and validation data, and it also defines the model's classes. Since we downloaded the dataset from Roboflow, it should already be present. If you assembled the dataset another way, you may have to manually create the `data.yaml` configuration file. "
+        "There's one last step before we can run training: we need to create the Ultralytics training configuration YAML file. This file specifies the location of your train and validation data, and it also defines the model's classes. Since we downloaded the dataset from Roboflow, it should already be present. If you assembled the dataset another way, you may have to manually create the `data.yaml` configuration file."
       ]
     },
     {
@@ -1211,8 +1211,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
