Changed jupyter notebook

--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -71,20 +71,20 @@
         "\n",
         "Issue the following commands to create a new Python environment and activate it:\n",
         "\n",
-        "```\n",
+        "```shell\n",
         "conda create --name yolo-env1 python=3.12 -y\n",
         "conda activate yolo-env1\n",
         "```\n",
         "\n",
         "Install Ultralytics (which also installs import libraries like OpenCV-Python, Numpy, and PyTorch) by issuing the following command:\n",
         "\n",
-        "```\n",
+        "```shell\n",
         "pip install ultralytics\n",
         "```\n",
         "\n",
-        "If you have an NVIDIA GPU, you can install the GPU-enabled version of PyTorch by issuing the following command:\n",
+        "**ONLY** If you have an NVIDIA GPU, you can install the GPU-enabled version of PyTorch by issuing the following command:\n",
         "\n",
-        "```\n",
+        "```shell\n",
         "pip install --upgrade torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124\n",
         "```\n",
         "\n",
@@ -92,18 +92,18 @@
         "\n",
         "Create a new folder called `my_model` in your home directory (or wherever you want to store your model files). You can do this by running:\n",
         "\n",
-        "```\n",
+        "```shell\n",
         "mkdir my_model\n",
         "```\n",
         "Then, change into the `my_model` directory:\n",
         "\n",
-        "```\n",
+        "```shell\n",
         "cd my_model\n",
         "```\n",
         "\n",
         "Download the `yolo_detect.py` script into the `my_model` folder using:\n",
         "\n",
-        "```\n",
+        "```shell\n",
         "curl -o yolo_detect.py https://raw.githubusercontent.com/szrobi96/image_recognition/refs/heads/main/yolo_detect.py\n",
         "```\n",
         "\n",
@@ -1163,7 +1163,7 @@
         "In the Anaconda Prompt, change to the directory where you unzipped the model. You can do this by using the `cd` command followed by the path to the folder where you unzipped the model. For example, if you unzipped it to a folder called `my_model` in your home directory, you would use:\n",
         "\n",
         "```shell\n",
-        "cd path/to/folder/my_model\n",
+        "cd %USERPROFILE%\\my_model\n",
         "```\n",
         "\n",
         "**3. Run the model on a webcam or video file**\n",
@@ -1179,7 +1179,7 @@
         "If you want to run the model on a video file, replace `usb0` with the path to your video file. For example:\n",
         "\n",
         "```shell\n",
-        "python yolo_detect.py --model my_model.pt --source path/to/video.mp4 --resolution 1280x720\n",
+        "python yolo_detect.py --model my_model.pt --source path\\to\\video.mp4 --resolution 1280x720\n",
         "```\n",
         "\n",
         "You can also run the model on an video file, image, or folder of images. To see a full list of arguments for `yolo_detect.py`, issue `python yolo_detect.py --help` or see the [README file](https://github.com/EdjeElectronics/Train-and-Deploy-YOLO-Models/blob/main/README.md).\n"
