--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -200,7 +200,7 @@
         "3. Click **Download Dataset** and then again **Download Dataset** in the popup. Click **Continue**.\n",
         "4. Under **Image and Annotation Format**, select your desired format (for this notebook, choose **YOLOv11**), check **Download zip to computer**, and click **Continue**.\n",
         "\n",
-        "A `.zip` file containing your dataset will be downloaded to your computer.\n",
+        "A `.zip` file containing your dataset will be downloaded to your computer, please rename it manually to **data.zip**.\n",
         "\n",
         "> **Tip:** If you have trouble downloading with Mozilla Firefox, try using Google Chrome or Microsoft Edge instead.\n",
         "\n",
@@ -601,17 +601,17 @@
         "**1. Extract downloaded model**\n",
         "Take the `my_model.zip` file you downloaded in Step 7.1 and unzip it to a folder on your PC where you already have the `yolo_detect.py` script. You can use any unzip tool, such as the built-in Windows or macOS unzip tool, or a third-party tool like 7-Zip.\n",
         "\n",
-        "**2. Change directory to the model folder**\n",
+        "**Optional Change directory to the model folder (if you closed the terminal before)**\n",
         "In the Anaconda Prompt, change to the directory where you unzipped the model. You can do this by using the `cd` command followed by the path to the folder where you unzipped the model. For example, if you unzipped it to a folder called `my_model` in your home directory, you would use:\n",
         "\n",
         "```shell\n",
         "cd %USERPROFILE%\\my_model\n",
         "```\n",
         "\n",
-        "**3. Run the model on a webcam or video file**\n",
+        "**2. Run the model on a webcam or video file**\n",
         "Now that you're in the model folder, you can run the `yolo_detect.py` script to run inference on a webcam or video file. The script takes several arguments, including the model file, source (webcam or video file), and resolution.\n",
         "\n",
-        "To run the model on your webcam, use the following command:\n",
+        "To run the model on your webcam with the new model, use the following command:\n",
         "\n",
         "```shell\n",
         "python yolo_detect.py --model my_model.pt --source usb0 --resolution 1280x720\n",
