Mit Colab erstellt

--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -112,7 +112,7 @@
         "```\n",
         "\n",
         "Ultralytics provides already trained models that you can use for object detection. For example, you can use `yolo11n.pt`, which is a small, fast model that can detect 80 different classes of objects on a Webcam by issuing the following command:\n",
-        "```python\n",
+        "```shell\n",
         "python yolo_detect.py --model yolo11n.pt --source usb0 --resolution 1280x720\n",
         "```\n",
         "\n",
